force-app/main/default/objects/Datasource__c/Datasource__c.object-meta.xml
<CustomObject>
    <description>Data source for import data defintion</description>
    <label>Datasource</label>
    <nameField>
        <label>Datasource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Datasources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>