force-app/main/default/objects/Datasource__c/fields/ConsumerApexClass__c.field-meta.xml
<CustomField>
    <fullName>ConsumerApexClass__c</fullName>
    <label>Consumer ApexClass</label>
    <length>100</length>
    <type>Text</type>
</CustomField>