force-app/main/default/objects/Datasource__c/fields/LockProject__c.field-meta.xml
<CustomField>
    <fullName>LockProject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LockProject</label>
    <type>Checkbox</type>
</CustomField>