force-app/main/default/objects/Datasource__c/fields/StopImport__c.field-meta.xml
<CustomField>
    <fullName>StopImport__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The data source is not allowed to import if there is any invalid value</inlineHelpText>
    <label>Stop import if there is invalid value</label>
    <type>Checkbox</type>
</CustomField>