force-app/main/default/objects/Datasource__c/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <label>Target SObject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>